--- a/pom.xml
+++ b/pom.xml
@@ -245,13 +245,11 @@
                     <execution>
                         <phase>compile</phase>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
-
-
 
             <!-- javadoc -->
             <plugin>
