--- a/pom.xml
+++ b/pom.xml
@@ -18,18 +18,26 @@
 
     <properties>
         <kotlin.version>1.3.70</kotlin.version>
-        <jcq.version>1.2.7</jcq.version>
+        <jcq.version>1.3.1</jcq.version>
         <simple-robot-core.version>1.11.3</simple-robot-core.version>
         <kotlin.version>1.3.70</kotlin.version>
     </properties>
 
     <dependencies>
         <!-- jcq -->
+        <!-- https://mvnrepository.com/artifact/org.meowy.cqp/jcq-coolq -->
         <dependency>
-            <groupId>com.sobte.cqp</groupId>
+            <groupId>org.meowy.cqp</groupId>
             <artifactId>jcq-coolq</artifactId>
             <version>${jcq.version}</version>
         </dependency>
+
+        <!--  jcq old -->
+<!--        <dependency>-->
+<!--            <groupId>com.sobte.cqp</groupId>-->
+<!--            <artifactId>jcq-coolq</artifactId>-->
+<!--            <version>${jcq.version}</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>io.github.ForteScarlet</groupId>
